--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,6 @@ master_thesis/*.lof
 master_thesis/magisterkowytex/*
 master_thesis/RiverSim_master_thesis.bbl
 master_thesis/RiverSim_master_thesis.blg
+master_thesis/*.listing
+**.pygtex
+**.pygstyle
